--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+# Dependencies
 node_modules/
+
+# Environment variables
 .env
+
+# Logs
 *.log
+
+# OS generated files
 .DS_Store
 Thumbs.db
+
+# Build outputs
 dist/
 build/
