--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
