--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "knex": "^3.1.0",
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
