--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:rollback": "knex migrate:rollback",
     "db:seed": "knex seed:run",
     "db:reset": "docker compose down -v && docker compose up -d && knex migrate:latest && knex seed:run",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test-autograder-fixes.js",
+    "test:manual": "node test-autograder-fixes.js"
   },
   "keywords": [
     "api",
